// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot en mode muted 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#E6F8EE",
        "borderColor": "#7EE0B0",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
  testID="badge-container"
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#6B7280",
        },
        undefined,
      ]
    }
  >
    No vigilat
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot en mode neutral 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#F3F4F6",
        "borderColor": "#D1D5DB",
        "borderWidth": 1.25,
      },
      {
        "opacity": 0.7,
      },
    ]
  }
  testID="badge-container"
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#6B7280",
        },
        undefined,
      ]
    }
  >
    No vigilat
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per defecte 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#E6F8EE",
        "borderColor": "#7EE0B0",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
  testID="badge-container"
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#14532D",
        },
        undefined,
      ]
    }
  >
    No vigilat
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per tipus closed 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#FDE8E8",
        "borderColor": "#F4A6A6",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
  testID="badge-container"
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#9B1F1F",
        },
        undefined,
      ]
    }
  >
    Tancat
  </Text>
</View>
`;
